# depot

./: .gitignore  Dockerfile  Makefile  README.md  compose.yml  go.mod  go.sum  project_config.mk  run.sh
api/: auth.yaml  catalog.yaml  openapi.yaml
cmd/server/: main.go
dep-flask-front/: .dockerignore  .env  Dockerfile  config.py  pyproject.toml  requirements.txt
dep-flask-front/app/: __init__.py  befor_request.py
dep-flask-front/app/login/: __init__.py  forms.py  routes.py
dep-flask-front/app/main/: __init__.py  forms.py  import_classes.py  import_data.py  models.py  routes.py  services.py
dep-flask-front/app/main/routes/: classrooms.py  disciplines.py  groups.py  import_data.py  index.py  specialties.py  students.py  teachers.py  user.py
dep-flask-front/app/main/service/: import_classes.py  import_services.py  view_services.py
dep-flask-front/app/require/: __init__.py
dep-flask-front/app/services/: services.py
dep-flask-front/app/templates/: _alert_toast.html  _navbar.html  base.html  index.html  login.html
dep-flask-front/app/templates/control/: form.html  import.html  list.html  view.html
dep-flask-front/app/templates/macros/: modal.html  render.html  view.html
dep-flask-front/app/templates/view/: table.html
dep-go-auth/: Dockerfile  compose.yml  config.yml  go.mod  go.sum
dep-go-catalog/: Dockerfile  config.yml  go.mod  go.sum
dep-go-catalog/cmd/: main.go
dep-go-catalog/test/: test.sh
internal/repo/: models.go  repo.go  repo_test.go
internal/server/: handlers.go  http.go
k3s/: ingress.yml
scripts/: run.sh
(+47 files in other folders)
